--- a/mysite/login/templates/login/login.html
+++ b/mysite/login/templates/login/login.html
@@ -30,14 +30,14 @@
 
 <body class="bg-lightgreen">
     <div class="container-fluid ">
-        <div class="row justify-content-center">
+        <div class="row justify-content-center ">
             <h1>哈!要填喔!</h1>
         </div>
-        <div class="row align-items-end mt-5">
-            <div class="col-4">
+        <div class="row align-items-end mt-5 ">
+            <div class="col-4 text-center">
                 <img id="ania" src="/static/login/aniashock.png" class="rounded  w-75  " alt="shock">
             </div>
-            <div class="col-4">
+            <div class="col-4 ">
                 <form>
                     <div class="form-group">
                         <label for="exampleInputEmail1">Email address</label>
@@ -56,7 +56,7 @@
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </form>
             </div>
-            <div class="col-4">
+            <div class="col-4 text-center">
                 <img id="aniaeat" src="/static/login/aniaa.png" class="rounded w-75" alt="eating">
             </div>
         </div>
